app/assets/stylesheets/admin/index.css.scss
// Styles for index lists

.filters {
    .filter.label {
    display: inline-block; 
    margin-right: 10px;
    }

    form {
    display: inline-block;
    }
}

.header-highlighted {
    background-color: $successBackground;
}

th.clickable {
    cursor: pointer;
    &:hover {
        background-color: $infoBackground;
    }
}

.index-list {
    position: relative;

    th, td {
        overflow: hidden;
        .cancel-link { float: right; }
    }

    thead {
        background: $white;

        &.ready {
            position: absolute;

            &.affix {
                border: 1px solid $grayLight;
                position: fixed; // Have to use redefine it here to override .ready
                top: $navOffset + $breadcrumbOffset + 10px !important;
                background: $warningBackground;
                @include box-shadow(0 2px 6px rgba(0,0,0,.2));
            }
        }
    }
}

